fixes buttons on mobile for projects

--- a/src/css/CovidNearUs.css
+++ b/src/css/CovidNearUs.css
@@ -25,7 +25,8 @@
     flex-direction: column;
     align-items: center;
     width: 40%;
-    height: fit-content;
+    height: 140.1vh;
+    justify-content: space-between;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
