--- a/src/css/Triphikers.css
+++ b/src/css/Triphikers.css
@@ -25,7 +25,8 @@
     flex-direction: column;
     align-items: center;
     width: 40%;
-    height: fit-content;
+    height: 124.5vh;
+    justify-content: space-between;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
@@ -142,6 +143,14 @@
     right: 0;
     width: 100%;
     height: 100%; 
+}
+
+.buttonsContainer {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: max-content;
+    margin-bottom: 1em;
 }
 
 @media (max-width: 770px) {
@@ -387,5 +396,14 @@
         right: 0;
         width: 100%;
         height: 100%; 
+    }
+
+    .buttonsContainer {
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: column;
+        width: 100%;
+        height: max-content;
+        margin-bottom: 1em;
     }
 }
